<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>costmap_generator</name>
    <version>0.0.0</version>
    <description>The costmap_generator package</description>
    <maintainer email="harada.akiro@gmail.com">Akiro Harada</maintainer>

    <license>Apache 2</license>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>wheel_stuck_utils</depend>
    <test_depend>ament_lint_auto</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>